<resources>
    <string name="app_name">书院</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_home">首页</string>
    <string name="title_market">集市</string>
    <string name="title_publish">发布</string>
    <string name="title_explore">发现</string>
    <string name="title_message">消息</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">通用设置</string>

    <string name="pref_title_social_recommendations">启用社交建议</string>
    <string name="pref_description_social_recommendations">根据您的消息历史记录让人们联系的建议
    </string>

    <string name="pref_title_display_name">显示名称</string>
    <string name="pref_default_display_name">伯乔</string>

    <string name="pref_title_add_friends_to_messages">添加朋友消息</string>
    <string-array name="pref_example_list_titles">
        <item>总是</item>
        <item>需要时</item>
        <item>从不</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">数据 &amp; 同步</string>

    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">系统同步设置</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">新消息提醒</string>

    <string name="pref_title_ringtone">响铃</string>
    <string name="pref_ringtone_silent">静默</string>

    <string name="pref_title_vibrate">震动</string>

    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <!--<string name="next">NEXT</string>-->
    <string name="register">REGISTER</string>

    <string name="title_activity_welcome">主屏幕</string>
    <string name="next">下一页</string>
    <string name="skip">上一页</string>
    <string name="start">开始</string>

    <string name="slide_1_title">Lonely</string>
    <string name="slide_2_title">Meet</string>
    <string name="slide_3_title">Fall in love at first sight</string>
    <string name="slide_4_title">Both fall in love</string>
    <string name="slide_5_title">Together forever</string>

</resources>
