<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/market"
        android:title="@string/title_market" />

    <item
        android:id="@+id/navigation_publish"
        android:icon="@drawable/add"
        android:title="@string/title_publish" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/explore"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/comments"
        android:title="@string/title_message" />

</menu>
